# quiz

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  bbc-quiz-output.json  pyproject.toml
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap-anydpi/: ic_launcher.xml  ic_launcher_round.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/wheels/: pydantic-1.10.24-py3-none-any.whl
docs/: FRONTEND.zh-CN.md  IMPLEMENTATION_GUIDE.zh-CN.md  LEARNING_PROFILES.zh-CN.md  OPERATIONS.zh-CN.md  QUESTION_DESIGN.zh-CN.md
examples/: demo_server.py  english-request.json  japanese-request.json  spanish-request.json
scripts/: fetch_learning_profiles.py
src/polyglot_quiz/: __init__.py  answer_order.py  api.py  cli.py  extraction.py  learning_profiles.py  mobile.py  models.py  observability.py  pipeline.py  profiles.py  progress.py  progressive.py  prompts.py  providers.py  pydantic_compat.py  quality.py
src/polyglot_quiz/data/: ATTRIBUTION.md
src/polyglot_quiz/web/: app.js  index.html  styles.css
src/polyglot_quiz/web_miniapp/: app.js  index.html  styles.css
tests/: test_answer_order.py  test_api.py  test_extraction.py  test_frontend.py  test_learning_profiles.py  test_models.py  test_pipeline.py  test_profiles.py  test_progress.py  test_providers.py  test_quality.py
(+4 files in other folders)
